--- a/_columns/The_Big_Picture/zh-cn/2024-11-27.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-11-27.md
@@ -142,27 +142,22 @@ Bond traders [raised the odds](https://www.cmegroup.com/markets/interest-rates/c
 “我们仍然认为，将政策利率下调 25 个基点的可能性极大。我们认为降息的几率仍高于期货市场目前隐含的 70%。在我们看来，需要非常强劲的 NFP（非农就业数据）数据和高于预期的核心 CPI 发布相结合，才能在 12 月的会议上暂停。
 
 
-[View the General Market Indicators chart page here](https://www.investors.com/wp-content/uploads/2024/11/DailyGMI_112724.pdf).  
-[在此处查看 General Market Indicators 图表页面](https://www.investors.com/wp-content/uploads/2024/11/DailyGMI_112724.pdf)。
+[View the General Market Indicators chart page here](https://www.investors.com/wp-content/uploads/2024/11/DailyGMI_112724.pdf).
 
 
-**YOU MAY ALSO LIKE: 您可能还喜欢：**
+**YOU MAY ALSO LIKE:**
 
 
-[The Four Pillars Of The IBD Methodology  
-IBD 方法的四大支柱](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/)
+[The Four Pillars Of The IBD Methodology](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/)
 
 
-[Risk Management In The Stock Market: How Much Money To Invest  
-股票市场的风险管理：投资多少钱](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)
+[Risk Management In The Stock Market: How Much Money To Invest](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)
 
 
-[IBD Live: Learn And Analyze Growth Stocks With The Pros  
-IBD Live：与专业人士一起学习和分析成长型股票](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=icmhpbrdcstmsg|cms|ibdlive|2019|11|ibdlive|na|707596&src=A00387A)
+[IBD Live: Learn And Analyze Growth Stocks With The Pros](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=icmhpbrdcstmsg|cms|ibdlive|2019|11|ibdlive|na|707596&src=A00387A)
 
 
-[Stocks Fall Into Thanksgiving; Nvidia Shows Some Fight  
-股市跌入感恩节;Nvidia 表现出一些战斗力](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-thanksgiving-nvidia/)
+[Stocks Fall Into Thanksgiving; Nvidia Shows Some Fight](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-thanksgiving-nvidia/)
 
 
 
