--- a/_columns/The_Big_Picture/zh-cn/2024-11-29.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-11-29.md
@@ -20,7 +20,8 @@ The Nasdaq composite ended Friday's shortened session up 0.8%. This allowed the 
 
 
 
-The S&P 500 closed at record highs after ending the session up 0.6%. Its weekly lift came in at 1.1%, which helped escalate it 5.7% for the month. It notched its best monthly improvement since November 2023. The benchmark index is clear of all its moving averages and is now up 26.5% in 2024.  
+The S&P 500 closed at record highs after ending the session up 0.6%. Its weekly lift came in at 1.1%, which helped escalate it 5.7% for the month. It notched its best monthly improvement since November 2023. The benchmark index is clear of all its moving averages and is now up 26.5% in 2024.  
+标准普尔 500 指数收盘上涨 0.6% 后收于历史高位。其每周涨幅为 1.1%，这帮助其当月上涨了 5.7%。它创下了自 2023 年 11 月以来的最佳月度涨幅。该基准指数清除了所有移动平均线，目前在 2024 年上涨了 26.5%。
 
 
 Advancers led decliners by almost 2-to-1 on both the New York Stock Exchange and the Nasdaq. Volume was lower on both exchanges due to the truncated trading day.  
@@ -31,14 +32,16 @@ The Dow Jones Industrial Average closed above the 45,000 level for the first tim
 道琼斯工业平均指数在周五上涨 0.4% 后首次收于 45,000 点上方。这帮助其实现了 7.9% 的月度强劲增长，也是自去年 11 月以来的最佳水平。**英伟达** （[NVDA）](https://research.investors.com/quote.aspx?symbol=NVDA) 和**波音** （[BA）](https://research.investors.com/quote.aspx?symbol=BA) 在备受关注的指数中涨幅最大。
 
 
-Small caps moved up as well, with the Russell 2000 rising 0.4% Friday. A monthly chart underlined its stellar recent performance, with the index booking an 11% jump. Still, the Innovator IBD 50 ETF ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)) left it in the dust, rising 2.4% and surging 19.6% for the month.  
+Small caps moved up as well, with the Russell 2000 rising 0.4% Friday. A monthly chart underlined its stellar recent performance, with the index booking an 11% jump. Still, the Innovator IBD 50 ETF ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)) left it in the dust, rising 2.4% and surging 19.6% for the month.  
+小盘股也上涨，罗素 2000 指数周五上涨 0.4%。月度图表强调了其近期的出色表现，该指数上涨了 11%。尽管如此，Innovator IBD 50 ETF （[FFTY）](https://research.investors.com/quote.aspx?symbol=FFTY) 仍将其甩在了后面，当月上涨了 2.4%，飙升了 19.6%。
 
 
-With election uncertainty out of the way and indexes sitting above short-term and major moving averages, the signs are looking positive for more gains in the final month of the year.  
+With election uncertainty out of the way and indexes sitting above short-term and major moving averages, the signs are looking positive for more gains in the final month of the year.  
+由于选举的不确定性已消除，指数位于短期和主要移动平均线上方，有迹象表明今年最后一个月将有更多收益。
 
 
-Jobs Report And Salesforce Earnings Loom
-----------------------------------------
+Jobs Report And Salesforce Earnings Loom就业报告和 Salesforce 收益迫在眉睫
+---------------------------------------------------------------
 
 
 Investors have a full slate of economic data to look forward to in the coming week following their Thanksgiving break.  
@@ -61,7 +64,8 @@ Semiconductor Stock Market Group Shines半导体股票市场集团大放异彩
 ----------------------------------------------------
 
 
-Most of the [S&P 500 sectors ended Friday higher](https://www.investors.com/category/etfs-and-funds/sectors/). Technology and consumer discretionary were the strongest areas while only real estate and utilities gave up ground.  
+Most of the [S&P 500 sectors ended Friday higher](https://www.investors.com/category/etfs-and-funds/sectors/). Technology and consumer discretionary were the strongest areas while only real estate and utilities gave up ground.  
+[标准普尔 500 指数的大部分板块周五收高](https://www.investors.com/category/etfs-and-funds/sectors/)。科技和非必需消费品是表现最强劲的领域，而只有房地产和公用事业回撤。
 
 
 
@@ -77,23 +81,27 @@ Chip equipment stocks were also strong, following a [Bloomberg report](https://c
 在[彭博社报道](https://click.email.investors.com/?qs=5105a7a4aeacf0ca1cccb08ce9e6ef5a448bc67e44f62b5ac05404b92b61110803bc7585fd36d46f5cf41aafad9c95037d42ce09a41d290d)称拜登政府正在考虑对中国半导体行业实施制裁后，芯片设备股也表现强劲，这些制裁的力度没有最初担心的那么严厉。SPDR S&P Semiconductor （[XSD](https://research.investors.com/quote.aspx?symbol=XSD)） 交易所交易基金上涨 1.9%。
 
 
-In contrast, generic drug stocks, office supply retailers, oil-and-gas royalty trusts, dairy products plays and coal miners all lagged.  
+In contrast, generic drug stocks, office supply retailers, oil-and-gas royalty trusts, dairy products plays and coal miners all lagged.  
+相比之下，仿制药、办公用品零售商、石油和天然气特许权使用费信托、乳制品公司和煤矿公司都表现落后。
 
 
 [View the General Market Indicators chart page here](https://www.investors.com/wp-content/uploads/2024/11/DailyGMI_112924.pdf).  
 [在此处查看 General Market Indicators 图表页面](https://www.investors.com/wp-content/uploads/2024/11/DailyGMI_112924.pdf)。
 
 
-*Please follow Michael Larkin on X at [@IBD\_MLarkin](https://twitter.com/IBD_MLarkin) for more analysis of growth stocks.* 
+*Please follow Michael Larkin on X at [@IBD\_MLarkin](https://twitter.com/IBD_MLarkin) for more analysis of growth stocks.  
+请关注 Michael Larkin 在 X at [@IBD\_MLarkin](https://twitter.com/IBD_MLarkin) 上的更多分析。*
 
 
-**YOU MAY ALSO LIKE:** 
+**YOU MAY ALSO LIKE: 您可能还喜欢：**
 
 
-[This Sector Leader On 300% Run Eyes Fresh Buy Point](https://www.investors.com/stock-lists/sector-leaders/stock-market-sector-leader-buy-point-accelerating-earnings-impinj-nvidia/) 
+[This Sector Leader On 300% Run Eyes Fresh Buy Point  
+这家 300% Run 的行业领导者关注新的买入点](https://www.investors.com/stock-lists/sector-leaders/stock-market-sector-leader-buy-point-accelerating-earnings-impinj-nvidia/)
 
 
-[AI Stock Holds An Nvidia-Like Gain. This Is Why.](https://www.investors.com/research/the-new-america/coherent-cohr-stock-nvidia-nvda-artificial-intelligence-ai/) 
+[AI Stock Holds An Nvidia-Like Gain. This Is Why.  
+AI 股票拥有类似 Nvidia 的收益。这就是原因。](https://www.investors.com/research/the-new-america/coherent-cohr-stock-nvidia-nvda-artificial-intelligence-ai/)
 
 
 [These Are The Five Best Stocks To Buy And Watch Now  
