--- a/_columns/The_Big_Picture/zh-cn/2024-12-02.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-12-02.md
@@ -98,8 +98,7 @@ Fintech company **SoFi Technologies** ([SOFI](https://research.investors.com/quo
 
 
 
-After SoFi built a long, deep first-stage base from the beginning of the year through September, patient investors got rewarded if they bought the now-large-cap stock on a [trendline breakout](https://www.investors.com/how-to-invest/investors-corner/how-to-draw-trendlines-and-find-lower-buy-points-in-stock-charts/) near 8.50 during the week ended Oct. 11, or even as SoFi busted past the deep pattern's left-side high of 10.49. The decline in the base, 43%, is certainly deeper than normal. In a typical bullish cup pattern, the correction usually does not exceed 30% or so.  
-在 SoFi 从年初到 9 月建立了漫长而深厚的第一阶段基础后，耐心的投资者如果在截至 10 月 11 日的一周内在 8.50 附近的[趋势线突破](https://www.investors.com/how-to-invest/investors-corner/how-to-draw-trendlines-and-find-lower-buy-points-in-stock-charts/)时买入现在的大盘股，或者即使 SoFi 突破了深度模式的左侧高点 10.49，他们也会获得回报。基数 （43%） 的下降幅度肯定比正常情况要大。在典型的看涨杯形态中，修正通常不超过 30% 左右。
+After SoFi built a long, deep first-stage base from the beginning of the year through September, patient investors got rewarded if they bought the now-large-cap stock on a [trendline breakout](https://www.investors.com/how-to-invest/investors-corner/how-to-draw-trendlines-and-find-lower-buy-points-in-stock-charts/) near 8.50 during the week ended Oct. 11, or even as SoFi busted past the deep pattern's left-side high of 10.49. The decline in the base, 43%, is certainly deeper than normal. In a typical bullish cup pattern, the correction usually does not exceed 30% or so.  
 
 
 From the 10.49 buy point, SoFi (now with a market value of $17.3 billion, 1.08 billion shares outstanding) has rocketed as much as 58%. IBD readers should not chase the stock. Instead, watch for a new base or tight weekly price action to emerge.  
@@ -203,10 +202,12 @@ The yield on the key U.S. 10-year government bond rose mildly, up nearly two bas
 值得关注的 IBD 50 只股票](https://www.investors.com/research/ibd-50-growth-stocks-to-watch/)
 
 
-[Inside IBD Big Cap 20](https://research.investors.com/stock-lists/big-cap-20/)
+[Inside IBD Big Cap 20  
+IBD 大盘股 20 内部](https://research.investors.com/stock-lists/big-cap-20/)
 
 
-[Get Full Access To IBD Stock Lists And Ratings](https://www.investors.com/product/ibd-digital/?artProdLink=IBD_Digital)
+[Get Full Access To IBD Stock Lists And Ratings  
+获得对 IBD 股票列表和评级的完全访问权限](https://www.investors.com/product/ibd-digital/?artProdLink=IBD_Digital)
 
 
 
