--- a/_columns/The_Big_Picture/zh-cn/2024-12-04.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-12-04.md
@@ -145,13 +145,16 @@ The 10-year Treasury yield reversed lower by four basis points to 4.18%.
 IBD 方法的四大支柱](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/)
 
 
-[See Stocks On The List Of Market Leaders With IBD Leaderboard](https://www.investors.com/product/leaderboard/?artProdLink=Leaderboard) 
+[See Stocks On The List Of Market Leaders With IBD Leaderboard  
+查看 IBD 排行榜市场领导者名单上的股票](https://www.investors.com/product/leaderboard/?artProdLink=Leaderboard)
 
 
-[Risk Management In The Stock Market: How Much Money To Invest](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/) 
+[Risk Management In The Stock Market: How Much Money To Invest  
+股票市场的风险管理：投资多少钱](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)
 
 
-[IBD Live: Learn And Analyze Growth Stocks With The Pros](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=icmhpbrdcstmsg|cms|ibdlive|2019|11|ibdlive|na|707596&src=A00387A) 
+[IBD Live: Learn And Analyze Growth Stocks With The Pros  
+IBD Live：与专业人士一起学习和分析成长型股票](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=icmhpbrdcstmsg|cms|ibdlive|2019|11|ibdlive|na|707596&src=A00387A)
 
 
 
