--- a/_columns/The_Big_Picture/zh-cn/2024-12-03.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-12-03.md
@@ -85,16 +85,13 @@ The stock market uptrend continues to show signs of underlying strength, but the
 股市上涨趋势继续显示出潜在实力的迹象，但可操作股票的产量已经大大减少。如前所述，大龙头从 9 月开始出现。Leaderboard 于 9 月 13 日添加了 **DoorDash** （[DASH）](https://research.investors.com/quote.aspx?symbol=DASH) 和 Meta Platforms。**Axon Enterprise** （[AXO](https://research.investors.com/quote.aspx?symbol=AXO)） 于 9 月 12 日添加。
 
 
-There's not much to do if you're holding some big winners since September. But if you've trimmed some winners, reallocating capital has become more challenging. If you see a stock building a base that's near a proper buy point, make sure it's one of the leaders in the group. The risk now is that stocks building bases could be the laggard performers in a group.  
-如果您自 9 月以来持有一些大赢家，则无需太多工作。但是，如果你削减了一些赢家，重新分配资本就变得更具挑战性。如果您看到一只股票在适当的买入点附近建立基础，请确保它是该组中的领导者之一。现在的风险是，建立基础的股票可能是一组中表现落后的股票。
+There's not much to do if you're holding some big winners since September. But if you've trimmed some winners, reallocating capital has become more challenging. If you see a stock building a base that's near a proper buy point, make sure it's one of the leaders in the group. The risk now is that stocks building bases could be the laggard performers in a group.  
 
 
-In the enterprise software group, **Manhattan Associates** ([MANH](https://research.investors.com/quote.aspx?symbol=MANH)) offers a good example. The stock on Tuesday cleared an early entry in an eight-week base, but it's generally been a laggard with a middling [Relative Strength Rating](https://www.investors.com/how-to-invest/investors-corner/how-to-invest-in-stocks-relative-strength/) of 76.  
-在企业软件组中，**Manhattan Associates** （[MANH）](https://research.investors.com/quote.aspx?symbol=MANH) 就是一个很好的例子。该股周二在八周底部早盘入场，但总体上落后，[相对强弱评级](https://www.investors.com/how-to-invest/investors-corner/how-to-invest-in-stocks-relative-strength/)为 76 分。
+In the enterprise software group, **Manhattan Associates** ([MANH](https://research.investors.com/quote.aspx?symbol=MANH)) offers a good example. The stock on Tuesday cleared an early entry in an eight-week base, but it's generally been a laggard with a middling [Relative Strength Rating](https://www.investors.com/how-to-invest/investors-corner/how-to-invest-in-stocks-relative-strength/) of 76.  
 
 
-Buying leaders on pullbacks is perfectly sound strategy. The issue here is that with so many extended stocks, most are still holding well above their 50-day and 10-week lines. Buying a group leader after a pullback to the [21-day exponential moving average](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/) has generally worked well. But it's a riskier entry.  
-在回调时买入领先者是完全合理的策略。这里的问题是，由于有这么多延长的股票，大多数股票仍然远高于其 50 天和 10 周线。在回调至 [21 天指数移动平均线](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/)后买入组长通常效果很好。但这是一个风险更大的入口。
+Buying leaders on pullbacks is perfectly sound strategy. The issue here is that with so many extended stocks, most are still holding well above their 50-day and 10-week lines. Buying a group leader after a pullback to the [21-day exponential moving average](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/) has generally worked well. But it's a riskier entry.  
 
 
 
@@ -121,27 +118,22 @@ In the semiconductor sector, chip foundry **Taiwan Semiconductor** ([TSM](https:
 *在 Twitter [@IBD\_KShreve](https://www.twitter.com/IBD_KShreve) 上关注 Ken Shreve，了解更多股市分析和见解*。
 
 
-**YOU MAY ALSO LIKE: 您可能还喜欢：**
+**YOU MAY ALSO LIKE:** 
 
 
-[AI 'Inflection Point': IPO Leader Surges On Blowout Guidance  
-人工智能的“拐点”：IPO 领导者因井喷指引而飙升](https://www.investors.com/news/technology/credo-stock-credo-earnings-ai-inflection-point/)
+[AI 'Inflection Point': IPO Leader Surges On Blowout Guidance](https://www.investors.com/news/technology/credo-stock-credo-earnings-ai-inflection-point/) 
 
 
-[Top Growth Stocks To Buy And Watch  
-最值得购买和关注的成长型股票](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/)
+[Top Growth Stocks To Buy And Watch](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/) 
 
 
-[Learn How To Time The Market With IBD's ETF Market Strategy  
-了解如何使用 IBD 的 ETF 市场策略把握市场时机](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)
+[Learn How To Time The Market With IBD's ETF Market Strategy](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/) 
 
 
-[Find The Best Long-Term Investments With IBD Long-Term Leaders  
-与 IBD 长期领导者一起寻找最佳长期投资](https://www.investors.com/research/ibd-long-term-leaders-screen)
+[Find The Best Long-Term Investments With IBD Long-Term Leaders](https://www.investors.com/research/ibd-long-term-leaders-screen) 
 
 
-[Futures Rise On These Earnings Winners; Three Hot AI Stocks  
-这些收益赢家的期货上涨;三大热门 AI 股票](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-salesforce-earnings-meta-palantir-credo-shine/)
+[Futures Rise On These Earnings Winners; Three Hot AI Stocks](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-salesforce-earnings-meta-palantir-credo-shine/) 
 
 
 
