--- a/_columns/The_Big_Picture/zh-cn/2024-12-04.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-12-04.md
@@ -1,7 +1,7 @@
 ---
 layout: content
 title: >-
-  Dow Jones Tops 45,000 As S&P, Nasdaq Rise 4th Straight Day; Could Market Be Overheating?	道琼斯指数突破 45,000 点，标准普尔，纳斯达克连续第四天上涨;市场会过热吗？
+  Dow Jones Tops 45,000 As S&P, Nasdaq Rise 4th Straight Day; Could Market Be Overheating?	道琼斯指数上涨 45,000 点，标准普尔，纳斯达克指数连续第四天上涨;市场会过热吗？
 date: 2024-12-04 17:41 -0800
 author: JUAN CARLOS ARANCIBIA
 ---
