--- a/_columns/The_Big_Picture/zh-cn/2024-12-05.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-12-05.md
@@ -55,7 +55,7 @@ In the Dow Jones index, **3M** ([MMM](https://research.investors.com/quote.aspx?
 
 
 On the downside, **UnitedHealth** ([UNH](https://research.investors.com/quote.aspx?symbol=UNH)) and **Salesforce** ([CRM](https://research.investors.com/quote.aspx?symbol=CRM)) sold off 5.2% and 1.8%, respectively. Their combined point loss was 235 points. **McDonald's** ([MCD](https://research.investors.com/quote.aspx?symbol=MCD)) also cost the Dow nearly 27 points.  
-不利的一面是，**UnitedHealth** （[UNH](https://research.investors.com/quote.aspx?symbol=UNH)） 和 **Salesforce** （[CRM）](https://research.investors.com/quote.aspx?symbol=CRM) 分别下跌 5.2% 和 1.8%。他们的总损失是 235 分。**麦当劳** （[MCD](https://research.investors.com/quote.aspx?symbol=MCD)） 也使道琼斯指数下跌近 27 点。
+不利的一面是，**UnitedHealth** （[UNH](https://research.investors.com/quote.aspx?symbol=UNH)） 和 **Salesforce** （[CRM）](https://research.investors.com/quote.aspx?symbol=CRM) 分别下跌了 5.2% 和 1.8%。他们的总损失是 235 分。**麦当劳** （[MCD](https://research.investors.com/quote.aspx?symbol=MCD)） 也使道琼斯指数下跌近 27 点。
 
 
 The [Magnificent Seven stocks](https://www.investors.com/research/magnificent-seven-stocks-to-buy-and-and-watch/) ended mixed Thursday as the Roundhill Magnificent Seven ETF ([MAGS](https://research.investors.com/quote.aspx?symbol=MAGS)) climbed 0.6%. Notably, **Amazon.com** ([AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)) and **Tesla** ([TSLA](https://research.investors.com/quote.aspx?symbol=TSLA)) notched new highs.  
@@ -100,7 +100,7 @@ As the stock market treks higher, the environment continues to require diligent 
 
 
 [IBD MarketSurge's](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) Breaking Out Today list featured one new stock: **Icici Bank** ([IBN](https://research.investors.com/quote.aspx?symbol=IBN)), which broke out past a 31.60 cup-with-handle buy point. The Near Pivot list has seven stock ideas on it, and one is **Trip.com** ([TCOM](https://research.investors.com/quote.aspx?symbol=TCOM)), which is approaching a 69.67 buy point.  
-[IBD MarketSurge 的](https://get.investors.com/marketsurge/?artProdLink=MarketSurge)今日突破名单中有一只新股：**Icici Bank** （[IBN](https://research.investors.com/quote.aspx?symbol=IBN)），它突破了 31.60 的带手柄杯买入点。Near Pivot 列表上有七个股票想法，其中一个是 **Trip.com** （[TCOM](https://research.investors.com/quote.aspx?symbol=TCOM)），它接近 69.67 的买入点。
+[IBD MarketSurge 的](https://get.investors.com/marketsurge/?artProdLink=MarketSurge)今日突破名单以一只新股为特色：**Icici Bank** （[IBN](https://research.investors.com/quote.aspx?symbol=IBN)），该股突破了 31.60 杯带手柄买入点。Near Pivot 列表上有七个股票想法，其中一个是 **Trip.com** （[TCOM](https://research.investors.com/quote.aspx?symbol=TCOM)），它接近 69.67 的买入点。
 
 
 
